# senseshock

./: CMakeLists.txt  README.md  descriptors.inc  hid.cpp  hid.h  main.cpp  senseshock.h  strings.h  structs.h  usbhid.cpp  usbhid.h
.github/workflows/: build-and-release-rpm.yml
